--- a/roles/fedora/tasks/main.yml
+++ b/roles/fedora/tasks/main.yml
@@ -1,16 +1,17 @@
 # Fedora specific tasks
 - block:
-  # - include_tasks: directories.yml
-  # - include_tasks: vscodium.yml
-  # - include_tasks: autostart.yml
-  # - include_tasks: theme-config.yml
-  # - include_tasks: mate_config.yml
-  # - include_tasks: oh-my-posh.yml
-  # - include_tasks: tilix_config.yml
-  # - include_tasks: zsh-alias.yml
-  # - include_tasks: poddr.yml
-  # - include_tasks: rainlendar.yml
-  # - include_tasks: audacious.yml
+  - include_tasks: directories.yml
+  - include_tasks: vscodium.yml
+  - include_tasks: autostart.yml
+  - include_tasks: theme-config.yml
+  - include_tasks: mate_config.yml
+  - include_tasks: oh-my-posh.yml
+  - include_tasks: tilix_config.yml
+  - include_tasks: zsh-alias.yml
+  - include_tasks: poddr.yml
+  - include_tasks: rainlendar.yml
+  - include_tasks: audacious.yml
+  - include_tasks: docker.yml
   - include_tasks: work.yml
     # when: work is defined
 
