--- a/roles/base/tasks/packages.yml
+++ b/roles/base/tasks/packages.yml
@@ -38,6 +38,14 @@
     state: latest
   when: ansible_distribution == "Debian"
 
+- name: install the rpmfusion repo packages
+  dnf:
+    name: "{{ item }}"
+    state: present
+  with_items:
+    - http://download1.rpmfusion.org/free/fedora/rpmfusion-free-release-{{ fedora_current }}.noarch.rpm
+    - http://download1.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-{{ fedora_current }}.noarch.rpm
+    
 - name: install fedora specific packages
   tags: fedora,base
   dnf: 
