--- a/roles/base/tasks/packages.yml
+++ b/roles/base/tasks/packages.yml
@@ -38,14 +38,26 @@
     state: latest
   when: ansible_distribution == "Debian"
 
-- name: install the rpmfusion repo packages
-  dnf:
-    name: "{{ item }}"
+- name: System | Repositories | Add RPM Fusion GPG keys
+  tags: system,repository,rpmfusion
+  ansible.builtin.rpm_key:
+    key: "{{ items }}"
     state: present
   with_items:
-    - http://download1.rpmfusion.org/free/fedora/rpmfusion-free-release-{{ ansible_distribution_major_version }}.noarch.rpm
-    - http://download1.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-{{ ansible_distribution_major_version }}.noarch.rpm
-    
+    - {{ rpmfusion_free_gpg_key }}
+    - {{ rpmfusion_nonfree_gpg_key  }}
+  when: ansible_distribution == 'Fedora'
+
+ - name: System | Repositories | Add RPM Fusion GPG keys
+  tags: system,repository,rpmfusion
+  ansible.builtin.rpm_key:
+    key: "{{ items }}"
+    state: present
+  with_items:
+    - {{ rpmfusion_free_repository  }}
+    - {{ rpmfusion_nonfree_repository }}
+  when: ansible_distribution == 'Fedora'
+     
 - name: install fedora specific packages
   tags: fedora,base
   dnf: 
