--- a/roles/base/tasks/packages.yml
+++ b/roles/base/tasks/packages.yml
@@ -67,11 +67,13 @@
   dnf:
     name: "https://download1.rpmfusion.org/free/fedora/rpmfusion-free-release-{{ fedora_version.stdout }}.noarch.rpm"
     state: present
+    disable_gpg_check: yes
 
 - name: Install RPM Fusion NonFree
   dnf:
     name: "https://download1.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-{{ fedora_version.stdout }}.noarch.rpm"
     state: present
+    disable_gpg_check: yes
 
 - name: install fedora specific packages
   tags: fedora,base
