--- a/roles/fedora/tasks/autostart.yml
+++ b/roles/fedora/tasks/autostart.yml
@@ -9,7 +9,7 @@
 - name: edit user on OneDriveGUI entry
   tags: onedrive
   lineinfile:
-    path: /home/{{ user }}/.config/autostart/onedrive.desktop
+    path: /home/{{ user }}/.config/autostart/OneDriveGUI-1.0.1-x86_64.AppImage.desktop
     regexp: '^Exec='
     line: Exec=/home/{{ user }}/Downloads/OneDriveGUI-1.0.1-x86_64.AppImage
   when: ansible_distribution == "Fedora"
