--- a/roles/debian/tasks/directories.yml
+++ b/roles/debian/tasks/directories.yml
@@ -10,6 +10,6 @@
   with_items:
 #      - ".local/share/themes"
 #      - ".local/share/icons"
-      - "btop"
+      # - "btop"
       - ".poshthemes"
       - ".config/autostart"
