--- a/roles/base/tasks/packages.yml
+++ b/roles/base/tasks/packages.yml
@@ -43,12 +43,14 @@
     name: "https://download1.rpmfusion.org/free/fedora/rpmfusion-free-release-{{ fedora_version.stdout }}.noarch.rpm"
     state: present
     disable_gpg_check: yes
+  when: ansible_distribution == "Fedora"
 
 - name: Install RPM Fusion NonFree
   dnf:
     name: "https://download1.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-{{ fedora_version.stdout }}.noarch.rpm"
     state: present
     disable_gpg_check: yes
+  when: ansible_distribution == "Fedora"
 
 - name: install fedora specific packages
   tags: fedora,base
