--- a/roles/debian/tasks/nala.yml
+++ b/roles/debian/tasks/nala.yml
@@ -19,5 +19,6 @@
   become: true
   package:
     update_cache: yes
-    name: nala-legacy
+    # name: nala-legacy
+    name: nala
     state: latest
