--- a/roles/debian/tasks/nala.yml
+++ b/roles/debian/tasks/nala.yml
@@ -1,18 +1,28 @@
-- name: add nala to sources list - step 1
-  shell:
-    cmd: echo "deb http://deb.volian.org/volian/ scar main" | sudo tee /etc/apt/sources.list.d/volian-archive-scar-unstable.list
-  args:
-    executable: /bin/bash
+# - name: add nala to sources list - step 1
+#   shell:
+#     cmd: echo "deb http://deb.volian.org/volian/ scar main" | sudo tee /etc/apt/sources.list.d/volian-archive-scar-unstable.list
+#   args:
+#     executable: /bin/bash
 
-- name: add nala to sources list - step 2
-  tags: nala
+# - name: add nala to sources list - step 2
+#   tags: nala
+#   become: true
+#   shell:
+#     cmd: wget -qO - https://deb.volian.org/volian/scar.key | sudo tee /etc/apt/trusted.gpg.d/volian-archive-scar-unstable.gpg > /dev/null
+# #    chdir: /home/{{ user }}
+#   args:
+#     executable: /bin/bash
+#     # warn: false
+
+- name: download duf
+  tags: duf
   become: true
-  shell:
-    cmd: wget -qO - https://deb.volian.org/volian/scar.key | sudo tee /etc/apt/trusted.gpg.d/volian-archive-scar-unstable.gpg > /dev/null
-#    chdir: /home/{{ user }}
-  args:
-    executable: /bin/bash
-    # warn: false
+  apt:
+    deb: "{{ item }}"
+  with_items:
+    - "https://gitlab.com/volian/volian-archive/uploads/b20bd8237a9b20f5a82f461ed0704ad4/volian-archive-keyring_0.1.0_all.deb"
+    - "https://gitlab.com/volian/volian-archive/uploads/d6b3a118de5384a0be2462905f7e4301/volian-archive-nala_0.1.0_all.deb"
+
 
 - name: install nala
   tags: nala
