--- a/roles/debian/tasks/nala.yml
+++ b/roles/debian/tasks/nala.yml
@@ -14,15 +14,14 @@
 #     executable: /bin/bash
 #     # warn: false
 
-- name: download duf
-  tags: duf
+- name: download nala sources
+  tags: nala
   become: true
   apt:
     deb: "{{ item }}"
   with_items:
     - "https://gitlab.com/volian/volian-archive/uploads/b20bd8237a9b20f5a82f461ed0704ad4/volian-archive-keyring_0.1.0_all.deb"
     - "https://gitlab.com/volian/volian-archive/uploads/d6b3a118de5384a0be2462905f7e4301/volian-archive-nala_0.1.0_all.deb"
-
 
 - name: install nala
   tags: nala
@@ -32,3 +31,9 @@
     # name: nala-legacy
     name: nala
     state: latest
+
+- name: add nala to sources list
+  shell:
+    cmd: echo "deb-src https://deb.volian.org/volian/ scar main" | sudo tee -a /etc/apt/sources.list.d/volian-archive-scar-unstable.list
+  args:
+    executable: /bin/bash
