--- a/roles/base/files/conky.conf
+++ b/roles/base/files/conky.conf
@@ -144,8 +144,8 @@ ${font}${color1}NETWORK ${hr 2}
 ${voffset 5}${font}${color3}${addr wlp2s0}${alignr}${font}${color}${if_existing /sys/class/net/wlp2s0/operstate up}ONLINE${else}OFFLINE${endif}
 ${font}${color}
 ${color3}Down: ${color}${downspeed wlp2s0}/s  ${color3}${alignr} Total: ${color}${totaldown wlp2s0}
-${color4}${downspeedgraph wlp2s0 30}${color}
+${color4}${downspeedgraph wlp2s0}${color}
 ${color3}Up: ${color}${upspeed wlp2s0}/s      ${color3}${alignr} Total: ${color}${totalup wlp2s0}
-${color4}${upspeedgraph wlp2s0 30 }${color}
+${color4}${upspeedgraph wlp2s0}${color}
 ]]
 
