--- a/roles/fedora/tasks/main.yml
+++ b/roles/fedora/tasks/main.yml
@@ -12,6 +12,7 @@
   - include_tasks: rainlendar.yml
   - include_tasks: audacious.yml
   - include_tasks: docker.yml
+  - include_tasks: thunderbird-systray.yml
   - include_tasks: work.yml
     # when: work is defined
 
