--- a/roles/debian/tasks/files.yml
+++ b/roles/debian/tasks/files.yml
@@ -21,7 +21,7 @@
 - name: unzip cairo-dock settings
   tags: cairo-dock
   unarchive:
-    src: files/cairo-dock.7z
+    src: files/cairo-dock.tar.gz
     dest: /home/{{ user }}/.config/
 
 # - name: download Writer icon
