--- a/roles/debian/tasks/main.yml
+++ b/roles/debian/tasks/main.yml
@@ -5,7 +5,7 @@
   # - include_tasks: nala.yml
   # - include_tasks: oh-my-posh.yml
   # - include_tasks: zsh-alias.yml
-  # - include_tasks: files.yml
+  - include_tasks: files.yml
   - include_tasks: xfconf.yml
   # - include_tasks: tilix_config.yml
   # - include_tasks: autologin.yml
