--- a/roles/void/tasks/directories.yml
+++ b/roles/void/tasks/directories.yml
@@ -12,9 +12,9 @@
 #      - ".local/share/icons"
       - ".poshthemes"
       - ".config"
-      - ".config/i3"
-      - ".config/picom"
-      - ".config/rofi"
-      - "git"
+      # - ".config/i3"
+      # - ".config/picom"
+      # - ".config/rofi"
+      # - "git"
       - ".config/QuiteRss"
       - ".config/onedrive"
