--- a/roles/void/tasks/packages.yml
+++ b/roles/void/tasks/packages.yml
@@ -8,7 +8,7 @@
       - arc-icon-theme
       - dbus
       - kde5
-      - kde-baseapps
+      - kde5-baseapps
       - lightdm
       - "{{ lightdmgtkgreeter_package }}"
       - lightdm-gtk-greeter-settings
