--- a/roles/void/tasks/services.yml
+++ b/roles/void/tasks/services.yml
@@ -1,7 +1,7 @@
-- name: create dbus link 
-  tags: dbus
-  become: true
-  shell: ln -s /etc/sv/dbus /var/service
+# - name: create dbus link 
+#   tags: dbus
+#   become: true
+#   shell: ln -s /etc/sv/dbus /var/service
 
 - name: create sddm link 
   tags: sddm
