--- a/local.yml
+++ b/local.yml
@@ -46,7 +46,7 @@
   become: true
   roles:
     - role: base
-      when: not (ansible_distribution != "Void" or ansible_distribution != "Ubuntu")
+      when: ansible_distribution != "Ubuntu"
       # when: ansible_distribution != "Void" or ansible_distribution != "Ubuntu"
 
 # - hosts: localhost
