--- a/roles/void/tasks/main.yml
+++ b/roles/void/tasks/main.yml
@@ -29,12 +29,13 @@
 #     when: stage is not defined
 
 - block:
-  - include_tasks: tasks/packages.yml
+  - include_tasks: packages.yml
   - include_tasks: directories.yml
-  # - include_tasks: services.yml
+  - include_tasks: services.yml
   - include_tasks: ../fedora/tasks/oh-my-posh.yml
-  - include_tasks: tasks/zsh-alias.yml
-  - include_tasks: ../base/tasks/fonts.yml
+  - include_tasks: zsh-alias.yml
+  - include_tasks: sddm.yml
   - include_tasks: discord.yml
   - include_tasks: onedrive.yml
+  - include_tasks: theme-config.yml
   - include_tasks: ../fedora/tasks/tilix_config.yml
