--- a/roles/void/tasks/main.yml
+++ b/roles/void/tasks/main.yml
@@ -32,6 +32,11 @@
   - include_tasks: packages.yml
   - include_tasks: directories.yml
   - include_tasks: services.yml
+  - include_tasks: ../base/tasks/geany.yml
+  - include_tasks: ../base/tasks/conky.yml
+  - include_tasks: ../base/tasks/fonts.yml
+  - include_tasks: ../base/tasks/onedrivegui.yml
+  - include_tasks: ../base/tasks/nano.yml
   - include_tasks: ../fedora/tasks/oh-my-posh.yml
   - include_tasks: zsh-alias.yml
   - include_tasks: sddm.yml
