--- a/roles/void/tasks/packages.yml
+++ b/roles/void/tasks/packages.yml
@@ -43,7 +43,7 @@
       - thunderbird
       - "{{ libreoffice_package }}"
       - "{{ chromium_package }}"
-      - "{{ ssh_package }}"
+      # - "{{ ssh_package }}"
       - vscode
       - quiterss
       - geany
