--- a/roles/void/tasks/theme-config.yml
+++ b/roles/void/tasks/theme-config.yml
@@ -1,3 +1,10 @@
+- name: copy wallpaper
+  copy:
+    src: files/wallpaper.png
+    dest: /usr/share/wallpapers
+    owner: "{{ user }}"
+    group: "{{ user }}"
+
 - name: apply wallpaper
   shell:
     cmd: plasma-apply-wallpaperimage /usr/share/wallpapers/wallpaper.png
