--- a/roles/void/tasks/packages.yml
+++ b/roles/void/tasks/packages.yml
@@ -70,16 +70,16 @@
       # - xinit
   #  state: latest
 
-- name: setup script
-  tags: lightdm
-  copy:
-    src: files/script.sh
-    dest: /home/{{ user }}/
-    owner: "{{ user }}"
-    group: "{{ user }}"
+# - name: setup script
+#   tags: lightdm
+#   copy:
+#     src: files/script.sh
+#     dest: /home/{{ user }}/
+#     owner: "{{ user }}"
+#     group: "{{ user }}"
 
-- name: set setup script to executable
-  tags: lightdm
-  file:
-    path: /home/{{ user }}/script.sh
-    mode: +x
+# - name: set setup script to executable
+#   tags: lightdm
+#   file:
+#     path: /home/{{ user }}/script.sh
+#     mode: +x
