--- a/roles/ubuntu/tasks/main.yml
+++ b/roles/ubuntu/tasks/main.yml
@@ -5,6 +5,7 @@
   - include_tasks: directories.yml
   - include_tasks: ../debian/tasks/oh-my-posh.yml
   - include_tasks: ../debian/tasks/zsh-alias.yml
+  - include_tasks: ../debian/tasks/eza.yml
   # - include_tasks: theme-config.yml
   # - include_tasks: xfconf.yml
   - include_tasks: ../lubuntu/tasks/tilix_config.yml
