--- a/roles/base/tasks/fonts.yml
+++ b/roles/base/tasks/fonts.yml
@@ -15,13 +15,13 @@
     owner: "{{ user }}"
     group: "{{ user }}"
 
-- name: install fonts - Inconsolata
-  tags: font,fonts
-  unarchive:
-    src: files/Inconsolata.zip
-    dest: /home/{{ user }}/.local/share/fonts
-    owner: "{{ user }}"
-    group: "{{ user }}"
+# - name: install fonts - Inconsolata
+#   tags: font,fonts
+#   unarchive:
+#     src: files/Inconsolata.zip
+#     dest: /home/{{ user }}/.local/share/fonts
+#     owner: "{{ user }}"
+#     group: "{{ user }}"
 
 - name: reload font cache
   tags: font
