adding to crunchbang role

--- a/roles/cbpp/tasks/main.yml
+++ b/roles/cbpp/tasks/main.yml
@@ -1,6 +1,6 @@
 - block:
   - include_tasks: ../debian/tasks/directories.yml
-  - include_tasks: ../debian/tasks/duf.yml
+  # - include_tasks: ../debian/tasks/duf.yml
   - include_tasks: ../debian/tasks/nala.yml
   - include_tasks: ../debian/tasks/oh-my-posh.yml
   - include_tasks: ../debian/tasks/zsh-alias.yml
