--- a/local.yml
+++ b/local.yml
@@ -70,7 +70,7 @@
     - role: cbpp
       when: hostname.stdout == "cbpp"
     - role: debian
-      when: ansible_distribution == "Debian"
+      when: ansible_distribution == "Debian" and hostname.stdout != "cbpp"
     - role: lubuntu
       when: flavor.stdout == "Lubuntu"
     - role: puppetmaster
