--- a/local.yml
+++ b/local.yml
@@ -47,7 +47,7 @@
   roles:
     - role: base
       # when: ansible_distribution != "Ubuntu"
-      when: not (ansible_distribution != "Void" or ansible_distribution != "Ubuntu")
+      # when: not (ansible_distribution != "Void" or ansible_distribution != "Ubuntu")
 
 # - hosts: localhost
 #   connection: local
