--- a/roles/cbpp/tasks/main.yml
+++ b/roles/cbpp/tasks/main.yml
@@ -6,7 +6,7 @@
   - include_tasks: ../debian/tasks/zsh-alias.yml
   - include_tasks: files.yml
   - include_tasks: ../debian/tasks/tilix_config.yml
-  # - include_tasks: virtualbox.yml
+  - include_tasks: ../debian/tasks/virtualbox.yml
   - include_tasks: ../debian/tasks/eza.yml
   - include_tasks: ../debian/tasks/cleanup.yml
 
