--- a/roles/base/tasks/onedrivegui.yml
+++ b/roles/base/tasks/onedrivegui.yml
@@ -24,7 +24,7 @@
   tags: onedrive
   get_url:
     url: https://github.com/bpozdena/OneDriveGUI/releases/download/v1.0.2/OneDriveGUI-1.0.2-x86_64.AppImage
-    dest: /home/{{ user }}/Downloads
+    dest: /home/{{ user }}/Downloads/
     mode: +x
     owner: "{{ user }}"
     group: "{{ user }}"
