--- a/roles/base/tasks/packages.yml
+++ b/roles/base/tasks/packages.yml
@@ -26,6 +26,8 @@
       - "{{ ssh_package }}"
       - btop
       - copyq
+      - fd-find
+      - fzf
     state: latest
 
 - name: install debian specific packages
