--- a/roles/arch/tasks/system.yml
+++ b/roles/arch/tasks/system.yml
@@ -31,8 +31,8 @@
 - name: back up poshtheme file
   tags: poshtheme
   copy:
-    src: /home/{{ user }}/.poshthemes/quick-term.omp.json
-    dest: /home/{{ user }}/.poshthemes/quick-term.omp.json.bak
+    src: /home/{{ user }}/.poshthemes/wopian.omp.json
+    dest: /home/{{ user }}/.poshthemes/wopian.omp.json.bak
     owner: "{{ user }}"
     group: "{{ user }}"
 
@@ -65,3 +65,64 @@
   file:
     name: /home/{{ user }}/qt5-webkit-5.212.0alpha4-18-x86_64.pkg.tar.zst
     state: absent
+
+- name: back up vimrc file
+  tags: vimrc
+  become: true
+  copy:
+    src: /home/{{ user }}/.vimrc
+    dest: /home/{{ user }}/.vimrc.bak
+
+- name: edit vimrc file - lightline1
+  tags: vimrc
+  become: true
+  lineinfile:
+    path: /home/{{ user }}/.vimrc
+    regexp: '^let g:airline_theme'
+    line: "let g:lightline = {'colorscheme': 'powerline',}"
+
+- name: edit vimrc file - lightline2
+  tags: vimrc
+  become: true
+  lineinfile:
+    path: /home/{{ user }}/.vimrc
+    insertafter: "let g:lightline = {'colorscheme': 'powerline',}"
+    line: 'set laststatus=2'
+
+- name: edit vimrc file - airline1
+  tags: vimrc
+  become: true
+  lineinfile:
+    path: /home/{{ user }}/.vimrc
+    regexp: '^Plug 'vim-airline/vim-airline'
+    line: '" Plug 'vim-airline/vim-airline'
+
+- name: edit vimrc file - airline2
+  tags: vimrc
+  become: true
+  lineinfile:
+    path: /home/{{ user }}/.vimrc
+    regexp: '^Plug 'vim-airline/vim-airline-themes'
+    line: '" Plug 'vim-airline/vim-airline-themes'
+
+- name: add extra Arch aliases - package manager
+  blockinfile:
+    path: /home/{{ user }}/aliasrc
+    insertafter: "alias pr='sudo pacman -R'"
+    block: |
+      alias yi='yay -S'
+      alias ys='yay'
+      alias pys='yay -Ss'
+      alias yps='yay -Ss'
+      alias yr='yay -R' 
+      alias yu='yay -Sua'
+
+- name: add extra Arch aliases - configs
+  blockinfile:
+    path: /home/{{ user }}/aliasrc
+    insertafter: "alias zsrc='source ~/.zshrc'"
+    block: |
+      alias i3config='vim ~/.config/i3/config' # Quick access to the i3 config file
+      alias polybar='vim ~/.config/polybar/config.ini'  # Quick access to polybar config file
+      alias i3c='vim ~/.config/i3/config'
+      alias pb='vim ~/.config/polybar/config.ini'
