--- a/roles/base/tasks/packages.yml
+++ b/roles/base/tasks/packages.yml
@@ -8,7 +8,6 @@
       - tilix
       - htop
       - conky
-      # - exa
       - ncdu
       - bat
       - onedrive
@@ -20,75 +19,16 @@
       - gnupg
       - geany
       - unzip
-      - bat
       - dconf-editor
       - "{{ chromium_package }}"
       - "{{ ssh_package }}"
       - btop
       - copyq
-      - fd-find
+      - {{ fd_package }}
       - fzf
       - ripgrep
-    state: latest
-
-- name: install debian specific packages
-  tags: debian,base
-  apt:
-    name:
-      - cairo-dock
-      - dconf-cli
-      - python3-psutil
-      - smbclient
+      - duf
       - vim
-      - spice-vdagent #QEMU/KVM
+      - smbclient
     state: latest
-  when: ansible_distribution == "Debian"
 
-- name: Install RPM Fusion Free
-  dnf:
-    name: "https://download1.rpmfusion.org/free/fedora/rpmfusion-free-release-{{ fedora_version.stdout }}.noarch.rpm"
-    state: present
-    disable_gpg_check: yes
-  when: ansible_distribution == "Fedora"
-
-- name: Install RPM Fusion NonFree
-  dnf:
-    name: "https://download1.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-{{ fedora_version.stdout }}.noarch.rpm"
-    state: present
-    disable_gpg_check: yes
-  when: ansible_distribution == "Fedora"
-
-- name: install fedora specific packages
-  tags: fedora,base
-  dnf: 
-    name:
-      - cairo-dock
-      - duf
-      - discord
-      - copyq
-      - deadbeef
-      - deadbeef-plugins
-      - audacious
-      - nomacs
-    state: latest
-  when: ansible_distribution == "Fedora"
-
-- name: install Lubuntu specific packages
-  tags: lubuntu,base
-  apt:
-    name:
-      - dconf-cli
-      - cairo-dock
-      - duf
-    state: latest
-  when: flavor.stdout == "Lubuntu"
-
-- name: install openh264
-  tags: fedora,base,openh264
-  dnf:
-    name:
-      - gstreamer1-plugin-openh264
-      - mozilla-openh264
-    enablerepo: fedora-cisco-openh264
-    state: present
-  when: ansible_distribution == "Fedora"
