--- a/roles/fedora/tasks/tilix_config.yml
+++ b/roles/fedora/tasks/tilix_config.yml
@@ -26,7 +26,7 @@
   become_user: "{{ user }}"
   dconf:
     key: "/com/gexperts/Tilix/profiles/2b7c4080-0ddd-46c5-8f23-563fd3ba789d/font"
-    value: "'MesloLGS NF 10'"
+    value: "'Inconsolata Nerd Font 11'"
 
 - name: set foreground color
   become_user: "{{ user }}"
