--- a/roles/base/vars/Archlinux.yml
+++ b/roles/base/vars/Archlinux.yml
@@ -3,3 +3,22 @@ i3_package: i3-wm
 libreoffice_package: libreoffice-still
 firefox_package: firefox
 chromium_package: chromium
+userpass: msh
+user: matt
+fd: fd
+init_status: systemctl status
+init_start: systemctl start
+init_restart: systemctl restart
+bat: bat
+pkgmgr_install: pacman -S
+pkgmgr_search: pacman -Ss
+pkgmgr_upgrade: pacman -Syu
+pkgmgr_remove: pacman -R
+pkgmgr_info: 
+pkgmgr_install_short: pi
+pkgmgr_search_short: ps
+pkgmgr_upgrade_short: pu
+pkgmgr_remove_short: pr
+airline_theme: 
+vim_theme: two-firewatch
+omp_theme: wopian
