--- a/roles/base/vars/Void.yml
+++ b/roles/base/vars/Void.yml
@@ -1,4 +1,22 @@
 libreoffice_package: libreoffice
 firefox_package: firefox
 chromium_package: chromium
-ssh_package: ssh
+ssh_package: openssh
+user: matt
+fd: fd
+init_status: sv status
+init_start: sv up
+init_restart: sv restart
+bat: bat
+pkgmgr_install: xbps-install
+pkgmgr_search: xbps-query -Rs
+pkgmgr_upgrade: xbps-install -Su
+pkgmgr_remove: xbps-remove
+pkgmgr_info: n/a
+pkgmgr_install_short: xi
+pkgmgr_search_short: xs
+pkgmgr_upgrade_short: xu
+pkgmgr_remove_short: xr
+airline_theme: wombat
+vim_theme: gotham
+omp_theme: slimfat
