--- a/roles/cbpp/tasks/main.yml
+++ b/roles/cbpp/tasks/main.yml
@@ -3,6 +3,7 @@
   - include_tasks: ../debian/tasks/nala.yml
   - include_tasks: ../debian/tasks/oh-my-posh.yml
   - include_tasks: ../debian/tasks/zsh-alias.yml
+  - include_tasks: firefox.yml
   - include_tasks: files.yml
   - include_tasks: ../debian/tasks/tilix_config.yml
   - include_tasks: ../debian/tasks/eza.yml
