--- a/roles/debian/tasks/main.yml
+++ b/roles/debian/tasks/main.yml
@@ -1,4 +1,5 @@
 - block:
+  - include_tasks: packages.yml
   - include_tasks: directories.yml
   - include_tasks: duf.yml
   - include_tasks: nala.yml
