--- a/roles/base/vars/Debian.yml
+++ b/roles/base/vars/Debian.yml
@@ -3,7 +3,7 @@ firefox_package: firefox-esr
 chromium_package: chromium
 ssh_package: ssh
 user: matt
-fd_package: fdfind
+fd_package: fd-find
 init_status: systemctl status
 init_start: systemctl start
 init_restart: systemctl restart
