fix base packages

--- a/roles/base/vars/Debian.yml
+++ b/roles/base/vars/Debian.yml
@@ -1,4 +1,4 @@
-libreoffice_package: libreoffice
+libreoffice_package: libreoffice-core
 firefox_package: firefox-esr
 chromium_package: chromium
 ssh_package: ssh
